# rosbag-fault-injection

./: .gitignore  CONTRIBUTING.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  installation.sh  requirements.txt
app/interfaces/: CMakeLists.txt  package.xml
app/num_generator/: package.xml  setup.cfg  setup.py
app/num_generator/launch/: all_launch.py
app/num_generator/num_generator/: feedback.py  generator.py  initialiser.py  multiplier.py
app/num_generator/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/: config.yaml  fault_injection.py  fault_types.py  inject.sh  plot.py  read_yaml.py  record.sh
